examples/misc/error/compilation/eval_nd-var_module.bfml
let c = 0
module B = import "../../metalang/import_b.bfml"

let _ = B:c

let main = []